syntax = "proto3";

package vcassist.services.studentdata.v1;

import "vcassist/services/studentdata/v1/student_data.proto";

message OAuthFlow {
  string base_login_url = 1;
  string access_type = 2;
  string scope = 3;
  string redirect_uri = 4;
  string code_verifier = 5;
  string client_id = 6;
  string token_request_url = 7;
}

// GetCredentialStatus
message CredentialStatus {
  string id = 1;
  string name = 2;
  string picture = 3;
  bool provided = 4;
  oneof login_flow {
    OAuthFlow oauth = 5;
  }
}
message GetCredentialStatusRequest {}
message GetCredentialStatusResponse {
  repeated CredentialStatus statuses = 1;
}

// ProvideCredential
message UsernamePassword {
  string username = 1;
  string password = 2;
}
message OAuthToken {
  string token = 1;
}
message ProvideCredentialRequest {
  string id = 1;
  oneof provided {
    UsernamePassword username_password = 2;
    OAuthToken oauth_token = 3;
  }
}
message ProvideCredentialResponse {}

// GetStudentData
message GetStudentDataRequest {}
message GetStudentDataResponse {
  vcassist.services.studentdata.v1.StudentData data = 1;
}

// RefreshData
message RefreshDataRequest {}
message RefreshDataResponse {
  vcassist.services.studentdata.v1.StudentData refreshed = 1;
}

service StudentDataService {
  rpc GetCredentialStatus(GetCredentialStatusRequest) returns (GetCredentialStatusResponse);
  rpc ProvideCredential(ProvideCredentialRequest) returns (ProvideCredentialResponse);
  rpc GetStudentData(GetStudentDataRequest) returns (GetStudentDataResponse);
  rpc RefreshData(RefreshDataRequest) returns (RefreshDataResponse);
}
